@@ -1,94 +1,91 @@
-### 🖥️ Node Analysis: ip-192-168-28-89.ec2.internal
+### 🖥️ Node-Level Analysis: ip-192-168-28-89.ec2.internal
 
-#### Node Capacity & Conditions
-- **CPU**: 4 cores
-- **Memory**: 16 GB
-- **Allocatable Resources**:
-  - **CPU**: 3920m
-  - **Memory**: 14.3 GB
-- **Conditions**: 
-  - MemoryPressure: False
-  - DiskPressure: False
-  - PIDPressure: False
-  - Ready: True
+#### Node Capacity and Allocatable Resources
+- **CPU**: 4 cores (Allocatable: 3920m)
+- **Memory**: 15.06 GiB (Allocatable: 14.36 GiB)
+- **Ephemeral Storage**: ~80 GiB (Allocatable: ~71 GiB)
+- **Pods**: 58 max
 
-#### Cloud Provider & Instance Type
-- **Provider**: AWS
+#### Node Conditions
+- **MemoryPressure**: False
+- **DiskPressure**: False
+- **PIDPressure**: False
+- **Ready**: True
+
+#### Cloud Provider Details
 - **Instance Type**: m5.xlarge
 - **Region**: us-east-1
 - **Zone**: us-east-1b
 
-#### Resource Allocation & Utilization
+#### Resource Allocation and Utilization
 - **CPU Requests**: 190m (4%)
-- **Memory Requests**: 184Mi (1%)
 - **CPU Limits**: 400m (10%)
+- **Memory Requests**: 184Mi (1%)
 - **Memory Limits**: 1280Mi (8%)
 
-#### Node-Level Issues
-- No OOMKill events or warnings detected.
+#### Node-Level Issues or Warnings
+- No OOMKill events or system warnings detected.
 
-### 🧵 Pod Analysis: avs-app-aerospike-vector-search-1
+### 🧵 Pod-Level Analysis: avs-app-aerospike-vector-search-1
 
-#### Configuration Review
-- **Node Roles**: index-update
-- **Heartbeat Seeds**: Correctly configured with two seeds.
-- **Listener Addresses**: Configured for 0.0.0.0 on port 5001.
-- **Interconnect Settings**: Properly set for all interfaces.
+#### Configuration Validation: `aerospike-vector-search.yml`
+- **Node Roles**: Correctly set to `index-update`.
+- **Heartbeat Seeds**: Configured with two seeds, ensuring redundancy.
+- **Listener Addresses**: Properly set to `0.0.0.0` for interconnect.
+- **Interconnect Settings**: Port `5001` configured correctly.
 
-#### JVM Configuration
+#### JVM Configuration Analysis
 - **Memory Settings**:
-  - **Initial Heap Size (-Xms)**: Not explicitly set, defaults to 243 MB.
-  - **Maximum Heap Size (-Xmx)**: 12.5 GB
-  - **Soft Max Heap Size (-XX:SoftMaxHeapSize)**: 12.5 GB
-  - **Reserved Code Cache Size (-XX:ReservedCodeCacheSize)**: 240 MB
-  - **Code Heap Sizes**: NonNMethod: 5.8 MB, NonProfiled: 122 MB, Profiled: 122 MB
+  - **Initial Heap Size (-Xms)**: Not explicitly set, defaulting to system.
+  - **Maximum Heap Size (-Xmx)**: 12,553m
+  - **Soft Max Heap Size (-XX:SoftMaxHeapSize)**: 12,553m
+  - **Reserved Code Cache Size (-XX:ReservedCodeCacheSize)**: 240MiB
+  - **Code Heap Sizes**: NonNMethod: 5.6MiB, NonProfiled: 117MiB, Profiled: 117MiB
 
 - **GC Settings**:
-  - **GC Type**: ZGC
-  - **GC Thread Counts**: ZYoungGCThreads=1, ZOldGCThreads=1
-  - **GC-specific Flags**: -XX:+ZGenerational
+  - **GC Type**: ZGC (-XX:+UseZGC)
+  - **GC Thread Counts**: Young: 1, Old: 1
+  - **GC-Specific Flags**: -XX:+ZGenerational
 
 - **Other Important Flags**:
-  - **NUMA Settings**: -XX:-UseNUMA, -XX:-UseNUMAInterleaving
-  - **Compressed Oops**: -XX:-UseCompressedOops
-  - **Pre-touch Settings**: -XX:+AlwaysPreTouch
-  - **Compiler Settings**: -XX:CICompilerCount=3
-  - **Exit on OOM**: -XX:+ExitOnOutOfMemoryError
+  - **NUMA Settings**: Disabled (-XX:-UseNUMA, -XX:-UseNUMAInterleaving)
+  - **Compressed Oops**: Disabled (-XX:-UseCompressedOops)
+  - **Pre-touch Settings**: Enabled (-XX:+AlwaysPreTouch)
+  - **Compiler Settings**: CICompilerCount=3
+  - **Exit on OOM**: Enabled (-XX:+ExitOnOutOfMemoryError)
 
 - **Module and Package Settings**:
   - **Added Modules**: jdk.incubator.vector
   - **Opened Packages**: Multiple packages opened for ALL-UNNAMED
-  - **Exported Packages**: Several packages exported for ALL-UNNAMED
+  - **Exported Packages**: Various internal packages exported
 
 #### GC.heap_info Analysis
-- **Current Heap Usage**: 2036 MB
-- **Heap Capacity**: 2972 MB
-- **Max Capacity**: 12.5 GB
-- **Metaspace Usage**: 82 MB
-- **Class Space Usage**: 8.9 MB
+- **Current Heap Usage**: 1706M
+- **Heap Capacity**: 2280M
+- **Max Capacity**: 12554M
+- **Metaspace Usage**: 82M
+- **Class Space Usage**: 8.9M
 
-#### Failed Config-Injection Logs
-- No failed configuration injections detected.
+#### Config-Injection Logs
+- No failed config-injection logs detected.
 
-### Recommendations
+### 🔧 Recommendations
 
 #### 1. Node-Level Optimizations
-- **Resource Requests**: Increase CPU and memory requests for critical pods to ensure they have guaranteed resources.
-- **Monitoring**: Implement monitoring for resource usage to prevent future resource constraints.
+- **CPU and Memory Utilization**: Consider increasing resource requests and limits for critical pods to ensure stability and performance, especially under load.
 
 #### 2. Pod-Level Configurations
-- **Heartbeat Seeds**: Ensure all nodes in the cluster are correctly listed as seeds for redundancy.
-- **Listener Configuration**: Consider restricting listener addresses to specific interfaces for security.
+- **JVM Heap Settings**: Explicitly set the initial heap size (-Xms) to match the maximum heap size (-Xmx) for better performance and predictability.
+- **Heartbeat Configuration**: Ensure all seed nodes are consistently reachable and monitor for any network issues.
 
 #### 3. Resource Allocation Adjustments
-- **CPU & Memory Limits**: Re-evaluate limits to prevent overcommitment and ensure stability.
+- **Memory Requests**: Increase memory requests for the AVS pod to align more closely with actual usage, preventing potential resource contention.
 
 #### 4. Performance Improvements
-- **GC Threads**: Consider increasing ZGC thread counts if GC pauses become an issue.
-- **NUMA Settings**: Evaluate the impact of enabling NUMA settings for potential performance gains.
+- **NUMA Settings**: Consider enabling NUMA settings if the node supports it, which can improve memory access times.
+- **Compressed Oops**: Evaluate enabling compressed oops for potential memory savings, unless specific performance reasons dictate otherwise.
 
 #### 5. JVM Memory Settings
-- **Heap Size**: Ensure the maximum heap size is within the limits of the node's available memory.
-- **Code Cache**: Monitor the usage of the code cache and adjust if necessary.
+- **Metaspace and Class Space**: Monitor usage and adjust metaspace settings if nearing capacity to prevent potential out-of-memory errors.
 
-By implementing these recommendations, you can enhance the stability and performance of the Aerospike Vector Search deployment on this node. 🚀
+By implementing these recommendations, you can enhance the performance and reliability of your Aerospike Vector Search deployment on this node. 🚀
